[package]
name = "qssl"
version = "0.1.0-alpha"
edition = "2021"
authors = ["QuantumVerse Protocols"]
license = "MIT OR Apache-2.0"
description = "Patent-free quantum-safe TLS using SPHINCS+ KEM instead of Kyber. Experimental implementation for research."
repository = "https://github.com/Paraxiom/qssl"
readme = "README.md"
keywords = ["quantum", "cryptography", "tls", "ssl", "post-quantum"]
categories = ["cryptography", "network-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Post-quantum cryptography (same as QSSH for compatibility)
pqcrypto = "0.17"
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.4"
pqcrypto-falcon = "0.2"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.5"

# Classical cryptography for hybrid mode
ring = "0.17"
x25519-dalek = "2.0"

# Encryption and hashing
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
aead = "0.5"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"
getrandom = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
bytes = "1.7"

# Zero-copy and memory safety
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Time
chrono = "0.4"

# FFI for C bindings
libc = "0.2"
once_cell = "1.19"

# Optional features
rustls = { version = "0.23", optional = true }  # For TLS compatibility mode
webpki = { version = "0.22", optional = true }  # For certificate validation

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"
hex = "0.4"
pretty_assertions = "1.4"
quickcheck = "1.0"
test-log = "0.2"
env_logger = "0.10"

[features]
default = ["std", "kyber768", "falcon512"]
std = []
no_std = []

# Algorithm features
kyber512 = []
kyber768 = []
kyber1024 = []
falcon512 = []
falcon1024 = []
dilithium2 = []
dilithium3 = []
dilithium5 = []
sphincsplus = []

# Protocol features
tls_compat = ["rustls", "webpki"]  # TLS compatibility mode
wasm = ["getrandom/js"]  # WebAssembly support
fips = []  # FIPS compliance mode
zero_rtt = []  # 0-RTT support
multiplexing = []  # Stream multiplexing

# Performance features
simd = []  # SIMD optimizations
hardware_accel = []  # Hardware acceleration support

# Testing features
deterministic = []  # Deterministic randomness for testing
fuzzing = []  # Fuzzing support

[lib]
name = "qssl"
crate-type = ["lib", "staticlib", "cdylib"]

# Benchmarks will be added later
# [[bench]]
# name = "handshake"
# harness = false
#
# [[bench]]
# name = "throughput"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true